# CppGame

./: CMakeLists.txt  README.md
Asteroids/: CMakeLists.txt  README.md
Asteroids/src/: BattleShip.cpp  BattleShip.h  Bullet.cpp  Bullet.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  main.cpp
CommonLibs/: README.md
CommonLibs/ASSIMP/lib/x64/: assimp-vc143-mt.exp  assimp-vc143-mtd.exp
CommonLibs/FREE_TYPE/lib/x64/: freetype-d.lib
CommonLibs/FREE_TYPE/lib/x86/: freetype-d.lib  freetype.lib
CommonLibs/GLAD/src/: glad.c
CommonLibs/IMGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
CommonLibs/IMGUI/include/imgui/GLFW/: imgui_impl_glfw.cpp
Doom/: CMakeLists.txt  README.md
Doom/src/: animatedSpriteObject.cpp  animatedSpriteObject.h  game.cpp  game.h  main.cpp  map.cpp  map.h  npc.cpp  npc.h  objectHandler.cpp  objectHandler.h  objectRenderer.cpp  objectRenderer.h  pathfinding.cpp  pathfinding.h  player.cpp  player.h  raycasting.cpp  raycasting.h  sound.cpp  sound.h  spriteObject.cpp  spriteObject.h  texture.cpp  texture.h  weapon.cpp  weapon.h
Doom/src/common/: common.h  constants.cpp  constants.h  logger.h
DoomFire/: CMakeLists.txt  README.md
DoomFire/src/: engine.cpp  engine.h  fire.cpp  fire.h  main.cpp
GameEngine/: CMakeLists.txt
GameEngine/resources/Shaders/: point.vert  pointWithMVP.vert
GameEngine/src/: engine.cpp  engine.h  main.cpp  rectangle.h  resourceManager.cpp  resourceManager.h  shaderProgram.cpp  shaderProgram.h  triangle.h  utility.cpp  utility.h
GameEngine/src/Camera/: camera.cpp  camera.h
GameEngine/src/Common/: constants.cpp  constants.h  debugOpenGL.cpp  debugOpenGL.h
GameEngine/src/Display/: displayWindow.cpp  displayWindow.h
GameEngine/src/Graphics/: circle.h  drawable.h  imageTexture.cpp  imageTexture.h  line.h  lines.h  point.h  points.h  rectangle.h  sphere.h  sphere_1.h  triangle.h  triangleStrip.h
GameEngine/src/Input/: Ikeyboard.h  Imouse.h  glfwKeyboard.cpp  glfwKeyboard.h  glfwMouse.cpp  glfwMouse.h  inputManager.cpp  inputManager.h  keymapping.cpp
GameEngine2/: CMakeLists.txt
GameEngine2/resources/Shaders/: default.frag  default.vert
GameEngine2/src/: camera.h  gameObject.cpp  gameObject.h  levelEditorScene.cpp  levelEditorScene.h  levelScene.h  main.cpp  scene.cpp  scene.h  transform.h  utility.cpp  utility.h
GameEngine2/src/Common/: constants.cpp  constants.h  debugOpenGL.cpp  debugOpenGL.h
GameEngine2/src/Components/: components.h  fontRenderer.h  sprite.h  spriteRenderer.h  spriteSheet.h
GameEngine2/src/Display/: displayWindow.cpp  displayWindow.h
GameEngine2/src/Input/: Ikeyboard.h  Imouse.h  glfwKeyboard.cpp  glfwKeyboard.h  glfwMouse.cpp  glfwMouse.h  inputManager.cpp  inputManager.h  keymapping.cpp
GameEngine2/src/Renderer/: renderBatch.cpp  renderBatch.h  renderer.cpp  renderer.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h
GravitySim/: CMakeLists.txt  README.md
GravitySim/src/: constant.h  game.cpp  game.h  gravity.cpp  gravity.h  helper.h  main.cpp  object.cpp  object.h
ParticleSimulator2D/: CMakeLists.txt  README.md
ParticleSimulator2D/resources/Shaders/: shader_0.frag  shader_0.vert  shader_1.frag  shader_1.vert  shader_1_instanced.frag  shader_1_instanced.vert  text.frag  text.vert
ParticleSimulator2D/src/: displayWindow.cpp  displayWindow.h  engine.cpp  engine.h  grid.cpp  grid.h  main.cpp  particle.cpp  particle.h  particleManager.cpp  particleManager.h  text.cpp  text.h
ParticleSimulator2D/src/Common/: common.h  constants.cpp  constants.h  logger.h
Pilot/: CMakeLists.txt
Pilot/src/: main.cpp
Pilot/src/Engine/: Common.h  Engine.cpp  Engine.h
Pilot/src/Engine/IO/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Pilot/src/Engine/Maths/: Vector3.cpp  Vector3.h
Pilot/src/Engine/Physics/: RigidBody.cpp  RigidBody.h
Pilot/src/Graphics/: Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
Tetris/: CMakeLists.txt  README.md
Tetris/src/: Command.cpp  Command.h  Common.cpp  Common.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  TetrisBlock.cpp  TetrisBlock.h  TetrisShapes.h  helper.h  main.cpp  tetromino.cpp  tetromino.h
Tetris2/: CMakeLists.txt
Tetris2/src/: constant.h  game.cpp  game.h  helper.h  main.cpp  tetromino.cpp  tetromino.h
src/: Command.h  TetrisBlock.cpp  TetrisShapes.cpp  main.cpp
